flux/infrastructure/base/tekton-operator/config/resources/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tekton-dashboard
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: internal
      namespace: gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tekton-dashboard
          port: 9097
